--- a/website/src/App.css
+++ b/website/src/App.css
@@ -2,24 +2,32 @@
 
 .conatiner{
   background-color: black;
+  display: flex;
+  justify-content: center;
 }
 
 .venture-container{
-  width: 60%;
   height: 90%;
-  margin-left: 15rem;
+  /* margin-left: 15rem; */
   justify-content: center;          
   align-items: center;
   background-color: black;
 }
 .line1{
   width: 6rem;
+  margin-left: 20rem;
   
 }
 .venture-content{
   display: flex;
+  width: 48.5rem;
   flex-direction: row;
   justify-content: space-between;
+  margin-top: 0;
+  margin-bottom: 0;
+  margin-left: 0;
+  margin-right: 0;
+
   align-items: center;
   flex-wrap: wrap;
 }
@@ -35,13 +43,20 @@
 .cont1{
   border: 1px solid  rgb(194, 173, 55);
   border-radius: 20px;
-  width: 10rem;
+  display: flex;
+  flex-direction: column ;
+  width: 13rem;
   margin: 3rem;
+  justify-content: center;
+  align-items: center;
+  margin-top: 5px;
+  margin-bottom: 5px;
+  margin-left: 23px;
+  margin-right: 23px;
 }
 .para1{
  color: white;
  font-family: "Work Sans", sans-serif;
- margin-left: 2rem;
 }
 .head1-vent{
   font-family: "Mulish", sans-serif;
@@ -63,12 +78,20 @@
   border: 1px solid  rgb(194, 173, 55);
 }
 .benefit-container{
-  border: 2px solid black;
   background-color: black;
+  display: flex;
+  flex-direction: column;
+}
+.resp-1{
+  display: flex;
+}
+.resp-2{
+  display: flex;
 }
 .ben-head{
   margin-left: 2rem;
-  column-gap: 0cap;
+  width: 40%;
+
 }
 .benefit-head1{
   font-family: "Mulish", sans-serif;
@@ -94,12 +117,17 @@
   justify-content: center;
   align-items: center;
   margin-right: 9rem;
+  /* flex-direction: column; */
 }
 .ben-img1{
   width: 10rem;
-  height: 7rem;
+  height: 8rem;
   color:  rgb(194, 173, 55) ;
-  
+}
+.ben-img2{
+  width: 10rem;
+  height: 8rem;
+  color:  rgb(194, 173, 55) ;
 }
 .ben-head1{
   color:rgb(194, 173, 55) ;
@@ -229,3 +257,13 @@
 .para2-foot{
   color: white;
 }
+
+.img-curve2{
+   display: none;
+}
+
+.img-curve1{
+  width: 80%;
+  position: absolute;
+}
+
