--- a/website/src/App.css
+++ b/website/src/App.css
@@ -5,25 +5,27 @@
   padding: 0;
   box-sizing: border-box;
 }
-.container {
+.nav-container {
   display: flex;
   justify-content: space-between;
+  color: black;
 }
-.head-1{
+.head-1 {
   padding-left: 1rem;
 }
-.first-img{
+.first-img {
   padding-left: 1rem;
 }
 .page-1 {
   background-image: url("./assets/Key.png");
   background-size: 100%;
-  height: 100vh;
+  height: 115vh;
+  background-repeat: no-repeat;
 }
 .first-para1 {
   font-size: 10px;
 }
-.first-para2{
+.first-para2 {
   padding-left: 0.5rem;
 }
 h1 {
@@ -46,12 +48,12 @@ h1 {
   align-items: center;
   justify-content: center;
   font-size: 90px;
-  margin-left: 400px;
-  margin-top: 150px;
+  /* margin-left: 400px;
+  margin-top: 150px; */
 }
 .head-3 {
   font-size: 135px;
-  position: absolute;
+  /* position: absolute; */
   top: 53px;
   right: 400px;
   background: linear-gradient(
@@ -64,7 +66,16 @@ h1 {
   color: transparent;
 }
 .centre-cntnt {
-  position: relative;
+  /* position: relative; */
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  height: 40rem;
+  gap: 5em;
+}
+.centre-h{
+  font-size: 135px;
 }
 
 .Left-logo {
@@ -95,8 +106,8 @@ h1 {
   border-radius: 10px;
   width: 8rem;
   border-style: none;
-  margin-top: 110px;
-  margin-left: 610px;
+  /* margin-top: 110px; */
+  /* margin-left: 610px; */
   color: antiquewhite;
   justify-content: center;
   align-items: center;
@@ -317,4 +328,17 @@ hr {
 }
 span {
   color: rgba(245, 207, 98, 1);
+}
+
+.landing-text {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+}
+
+.landing-text > * {
+  border: 0px;
+  line-height: 0.7;
+  
 }
