--- a/website/src/App.css
+++ b/website/src/App.css
@@ -74,7 +74,7 @@ h1 {
   height: 40rem;
   gap: 5em;
 }
-.centre-h{
+.centre-h {
   font-size: 135px;
 }
 
@@ -192,23 +192,26 @@ hr {
 }
 .Third-container {
   display: flex;
-
+  justify-content: space-between;
+  width: 100%;
+  align-items: center;
   background-color: rgba(18, 18, 18, 1);
   margin-bottom: 0;
 }
 .third-img {
-  height: 30rem;
-  width: 33rem;
+  /* height: 30rem;
+  width: 33rem; */
+  width: 50%;
 }
 .third-left {
-  width: 50%;
+  /* width: 50%; */
 
   margin-left: 5rem;
   margin-top: 4rem;
 }
-.third-right {
+/* .third-right {
   width: 50%;
-}
+} */
 .third-h1 {
   font-size: 4rem;
   color: rgba(245, 207, 98, 1);
@@ -241,20 +244,25 @@ hr {
 .Fourth-container {
   display: flex;
   background: rgba(18, 18, 18, 1);
+  justify-content: space-between;
+  width: 100%;
+  align-items: center;
   margin-top: 0;
 }
 .fourth-img {
-  height: 30rem;
-  width: 33rem;
+  /* height: 30rem;
+  width: 33rem; */
+  width: 50%;
 }
 .fourth-left {
-  width: 50%;
+  /* width: 50%; */
 
-  margin-left: 11.5rem;
+  /* margin-left: 11.5rem; */
   margin-top: 0;
 }
 .Fourth-right {
   width: 50%;
+
   margin-top: 6rem;
   margin-left: 10rem;
 }
@@ -292,7 +300,7 @@ hr {
   background-color: rgba(18, 18, 18, 1);
 }
 .fifth-img {
-  margin-left: 4rem;
+
   height: 30rem;
   width: 25rem;
   margin-top: 5rem;
@@ -340,5 +348,18 @@ span {
 .landing-text > * {
   border: 0px;
   line-height: 0.7;
-  
+}
+
+.values {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  background-color: rgba(18, 18, 18, 1);
+  padding: 4rem;
+}
+
+.values-img {
+  height: 50%;
+  width: 50%;
 }
